# nesemu

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  TODO  autotest.py  draw.h
logging/: logparse.sh
scripts/: fceuxlog.lua  parseinfo  runtests  runtests.lua  runtests2
src/: .cpu.cpp.swp  TODO  _ppu.cpp  _ppu.h  cart.c  cart.cc  cart.cpp  cart.h  common.h  config.h  controller.cpp  controller.h  cpu.c  cpu.cc  cpu.cpp  cpu.h  gfx.cc  graphics.h  instr.inc  main.c  main.cc  main.cpp  memory.cpp  memory.h  minunit.h  modes.inc  nametable.h  nesemu.h  opcode_table.inc  ppu.cc  ppu.cpp  ppu.h  screen.cpp  screen.h
src/console/: _ppu.cpp  _ppu.h  cart.cpp  cart.h  common.h  cpu.cpp  cpu.h  memory.cpp  memory.h  ppu.cpp  ppu.h
src/mappers/: mapper0.cpp  mapper0.h
test/: .nestest.cpp.swp  Test.cc  as.cpp  log_fmt.sh  nestest.cpp  nestest.log.inl  test.py
tools/: rominfo.cpp
windows/: gfx_sdl.cpp  gfx_sdl.h  main.cpp
